force-app/main/default/objects/EPA_LeaveQuota__c/EPA_LeaveQuota__c.object-meta.xml
<CustomObject>
    <description>Stores each apprentice's annual study leave quota, tracking entitlement, usage, and remaining balance per year. NOTE: The Quota Year reset mechanism (fixed calendar date vs. programme-anniversary date) is an open question that must be confirmed before automated rollover is implemented.</description>
    <label>Leave Quota</label>
    <nameField>
        <displayFormat>LQ-{00000}</displayFormat>
        <label>Quota Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Quotas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>