force-app/main/default/objects/EPA_LeaveQuota__c/fields/EPA_AnnualEntitlement__c.field-meta.xml
<CustomField>
    <fullName>EPA_AnnualEntitlement__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Annual Entitlement</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>