force-app/main/default/objects/EPA_LeaveQuota__c/fields/EPA_Apprentice__c.field-meta.xml
<CustomField>
    <fullName>EPA_Apprentice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apprentice</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leave Quotas</relationshipLabel>
    <relationshipName>LeaveQuotas</relationshipName>
    <type>Lookup</type>
</CustomField>