force-app/main/default/objects/EPA_LeaveQuota__c/fields/EPA_DaysRemaining__c.field-meta.xml
<CustomField>
    <fullName>EPA_DaysRemaining__c</fullName>
    <formula>EPA_AnnualEntitlement__c - EPA_DaysUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>