force-app/main/default/objects/EPA_LeaveQuota__c/fields/EPA_DaysUsed__c.field-meta.xml
<CustomField>
    <fullName>EPA_DaysUsed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days Used</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>