force-app/main/default/objects/EPA_LeaveQuota__c/fields/EPA_QuotaYear__c.field-meta.xml
<CustomField>
    <fullName>EPA_QuotaYear__c</fullName>
    <label>Quota Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>